# Bioinformatics_Tools

./: CMakeLists.txt  README.md
ext/bamtools/src/api/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/bam/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/index/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/io/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/sam/: Makefile  cmake_install.cmake
ext/bamtools/src/api/internal/utils/: Makefile  cmake_install.cmake
lib/: utils.h
src/: bamtofastq.cpp  fastqtofasta.cpp  revcomp.cpp  transcribe.cpp  translate.cpp
test/: test.bam  test.fasta  test.fastq
